1. 允许明确的只读根目录的  部分文件夹。 2，适应txt，其实是tsv格式的配表